# TGBotDeleter

./: .gitignore  CMakeLists.txt  README.md  TGBotDeleter.sln  TGBotDeleter.vcxproj  build.sh  key.txt  main.cpp
